import utils.Gerenciador;

public class IPhone {
  public static void main(String[] args) {
    System.out.println("Olá, bem-vindo ao seu novo iPhone, o que você quer fazer?");
    Gerenciador.EscolherOpcao();
  }
}