@startuml


class IPhone {
  + main(args: String[]): void
}

package "utils" {
  class Gerenciador {
    - Scanner console
    - ReprodutorMusical rm
    - AparelhoTelefonico at
    - NavegadorInternet ni
    --
    + EscolherOpcao(): void
    - delay(milissegundos: int): void
  }
}

package "reprodutormusical" {
  class ReprodutorMusical {
    - Scanner console
    - String[] artistas
    - String[] albuns
    - String[] musicas
    --
    + ReprodutorMusical(console: Scanner)
    + Iniciar(): void
    - AcessarPlaylists(): void
    - AcessarArtistas(): void
    - AcessarMusicas(): void
    - AcessarVideos(): void
    - VoltarAoMenu(): void
    - ExibirOpcoesDeNavegacao(escolhaAtual: String): void
  }
}

package "aparelhotelefonico" {
  class AparelhoTelefonico {
    - Scanner console
    - ArrayList<String> favoritos
    - ArrayList<String> recentes
    - String[] contatos
    - String[] fotos
    - String[] correioDeVoz
    --
    + AparelhoTelefonico(console: Scanner)
    + Iniciar(): void
    - AcessarFavoritos(): void
    - AcessarRecentes(): void
    - AcessarContatos(): void
    - AcessarCorreioDeVoz(): void
    - AcessarFotos(): void
    - ExibirOpcoesDeNavegacao(escolhaAtual: String): void
  }
}

package "navegadorinternet" {
  class NavegadorInternet {
    - Scanner console
    - String[] emails
    --
    + NavegadorInternet(console: Scanner)
    + Iniciar(): void
    - AcessarGoogleMaps(): void
    - AcessarEmail(): void
    - AcessarSafari(): void
    - VoltarAoMenu(): void
    - ExibirOpcoesDeNavegacao(escolhaAtual: String): void
  }
}

IPhone --> Gerenciador
Gerenciador --> ReprodutorMusical
Gerenciador --> AparelhoTelefonico
Gerenciador --> NavegadorInternet

@enduml